[package]
name = "eth_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
ethers = { version = "2.0.14", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
hex = "0.4"
hex-literal = "0.4.1"
futures-util = "0.3.31"
lazy_static = "1.4"
csv = "1.1"
